# Covid

.github/workflows/: main.yml
api/interaction/: Dockerfile  docker-compose.yml  pyproject.toml
api/interaction/deployment/: default.conf  nginx.conf
api/interaction/src/: main.py
api/interaction/src/api/: urls.py
api/interaction/src/api/endpoints/: files.py
api/interaction/src/common/: responses.py
api/interaction/src/core/: settings.py
api/interaction/src/schemas/: file_filter.py
api/interaction/src/services/: aws_s3.py
api/interaction/src/templates/: file_input_form.html  repository.html
api/streamlit/: Dockerfile  dashboard.py  pyproject.toml
lambda/: aws_config.sh  lambda_function.py  policy.json
notebook/: aws_config.sh  docker-compose.yml
