[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
boto3 = "^1.34.103"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
