[tool.poetry]
name = "straemlit-dashboard"
version = "0.1.0"
description = ""
authors = ["briankalid <briankalid2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
pandas = "^2.2.2"
pandas-redshift = "^2.0.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
